--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     ]
   },
   "dependencies": {
+    "@emotion/react": "11.6.0",
+    "@emotion/styled": "11.6.0",
+    "@mui/icons-material": "5.1.1",
+    "@mui/material": "5.1.1",
     "@reduxjs/toolkit": "1.6.2",
     "@testing-library/jest-dom": "5.15.0",
     "@testing-library/react": "12.1.2",
@@ -37,10 +41,13 @@
     "@types/react": "17.0.35",
     "@types/react-dom": "17.0.11",
     "@types/react-redux": "7.1.20",
-    "@typescript-eslint/parser": "^5.4.0",
+    "@typescript-eslint/parser": "5.4.0",
     "axios": "0.24.0",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "i18next": "^21.5.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-i18next": "^11.14.2",
     "react-redux": "7.2.6",
     "react-scripts": "4.0.3",
     "typescript": "4.5.2"
@@ -61,14 +68,15 @@
     "@babel/preset-react": "7.16.0",
     "@babel/preset-typescript": "7.16.0",
     "eslint": "8.3.0",
-    "eslint-import-resolver-typescript": "^2.5.0",
-    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-import-resolver-typescript": "2.5.0",
+    "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-jest": "25.2.4",
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-react": "7.27.1",
     "eslint-plugin-react-hooks": "4.3.0",
+    "eslint-plugin-testing-library": "5.0.0",
     "husky": "4.3.8",
     "pre-commit": "1.2.2",
     "prettier": "2.4.1"
