--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@emotion/react": "11.6.0",
     "@emotion/styled": "11.6.0",
+    "@material-ui/pickers": "3.3.10",
     "@mui/icons-material": "5.1.1",
     "@mui/material": "5.1.1",
     "@reduxjs/toolkit": "1.6.2",
@@ -41,14 +42,17 @@
     "@types/react": "17.0.35",
     "@types/react-dom": "17.0.11",
     "@types/react-redux": "7.1.20",
+    "@types/react-router-dom": "5.3.2",
     "@typescript-eslint/parser": "5.4.0",
     "axios": "0.24.0",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "i18next": "^21.5.2",
+    "babel-plugin-module-resolver": "4.1.0",
+    "i18next": "21.5.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-i18next": "^11.14.2",
+    "react-hook-form": "7.20.2",
+    "react-i18next": "11.14.2",
     "react-redux": "7.2.6",
+    "react-router-dom": "6.0.2",
     "react-scripts": "4.0.3",
     "typescript": "4.5.2"
   },
