--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "react-scripts build",
-    "eject": "react-scripts eject",
+    "start": "react-scripts start",
+    "test": "react-scripts test",
     "lint": "eslint . --fix --color --ext .js,.jsx,.ts,.tsx",
     "prettier": "prettier -w .",
-    "start": "react-scripts start",
-    "test": "react-scripts test"
+    "build": "react-scripts build",
+    "eject": "react-scripts eject"
   },
   "husky": {
     "hooks": {
